# kbdlayout

./: .gitignore  README.md  pyproject.toml
kbdlayout/: __init__.py  __main__.py  cli.py  layout.py  model.py  predict.py
kbdlayout/checkpoints/: best.json  best.pt
tests/: test_layout.py  test_predict.py
